--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -8,6 +8,7 @@
     width: 300px;
     height: 100%;
     padding: 24px;
+    margin-right: 24px;
     border-radius: 24px;
     background-color: rgba(255,255,255);
 }
