--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -40,10 +40,6 @@
     align-items: center;
     width: 100%;
     height: 48px;
-    border-radius: 24px;
-    background-color: rgba(0,0,0,0);
-    padding: 24px;
-    cursor: pointer;
     transition: all 0.1s;
 }
 
@@ -56,10 +52,18 @@
 }
 
 .sidebar__nav-link {
+    display: flex;
+    width: 100%;
+    height: 48px;
+    align-items: center;
     text-decoration: none;
     font-size: 1.2em;
     color: rgba(0,0,0,0.5);
     font-weight: 700;
+    border-radius: 24px;
+    background-color: rgba(0,0,0,0);
+    padding: 0 24px;
+    cursor: pointer;
     transition: all 0.1s;
 }
 
@@ -68,29 +72,25 @@
     transition: all 0.1s;
 } */
 
-.sidebar__nav-item:hover .sidebar__nav-link {
+.sidebar__nav-link:hover {
     color: rgb(0,0,0);
     transition: all 0.1s;
 }
 
-.sidebar__nav-item:hover .sidebar__nav-icon {
+.sidebar__nav-link:hover .sidebar__nav-icon {
     opacity: 1;
     transition: all 0.1s;
 }
 
-.sidebar__nav-item#selected {
+.sidebar__nav-link.active {
+    color: rgb(255,255,255);
     background-color: rgb(0,0,0);
     transition: all 0.3s;
 }
 
-.sidebar__nav-item#selected .sidebar__nav-icon {
+.sidebar__nav-link.active .sidebar__nav-icon {
     filter: invert(1);
     opacity: 1;
-    transition: all 0.3s;
-}
-
-.sidebar__nav-item#selected .sidebar__nav-link {
-    color: rgb(255,255,255);
     transition: all 0.3s;
 }
 
